--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <style>
+        table{
+            margin-bottom: 20px;
+        }
         input{
             margin-bottom: 20px;
 
@@ -50,7 +53,9 @@
 {% endif %}
 
 <div class="container" id="head">
-    <img src="{{ asset('images/logoVeliko.png') }}" width="200">
+    <a class="navbar-brand" href="/user/map">
+        <img src="{{ asset('images/logoVeliko.png') }}" alt="Logo Veliko" width="200">
+    </a>
     <h1></h1>
 </div>
 
