--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -141,5 +141,16 @@
         </li>
 
         {{ form_end(profileForm) }}
+
+
+        {% for label, messages in app.flashes %}
+            <div class="alert alert-{{ label }}">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endfor %}
+
+
     </div>
 {% endblock %}
