--- a/templates/security/index.html.twig
+++ b/templates/security/index.html.twig
@@ -21,20 +21,18 @@
         <label for="password">Password : </label>
         <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
 
+
+        {% for label, messages in app.flashes %}
+            <div class="alert alert-{{ label }}">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endfor %}
+
         <input type="hidden" name="_csrf_token"
                value="{{ csrf_token('authenticate') }}"
         >
-
-
-        {#
-            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html
-
-            <div class="checkbox mb-3">
-                <input type="checkbox" name="_remember_me" id="_remember_me">
-                <label for="_remember_me">Remember me</label>
-            </div>
-        #}
 
         <button class="btn btn-lg btn-primary" type="submit">
             Sign in
