--- a/templates/security/index.html.twig
+++ b/templates/security/index.html.twig
@@ -5,9 +5,9 @@
 {% block content %}
 
     <form method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+{#        {% if error %}#}
+{#            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
+{#        {% endif %}#}
 
         {% if app.user %}
             <div class="mb-3">
@@ -16,6 +16,13 @@
         {% endif %}
 
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
+
         <label for="username">Email : </label>
         <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
         <label for="password">Password : </label>
