--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -126,6 +126,11 @@
                 {{ message }}
             </div>
         {% endfor %}
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
 
         {{ form_start(profileForm) }}
 
