--- a/templates/favorite/index.html.twig
+++ b/templates/favorite/index.html.twig
@@ -8,7 +8,7 @@
             Connecté en tant que : <strong>{{ app.user.userIdentifier }}</strong>
         </div>
     {% endif %}
-    <h1 class="text-center my-4">Mes Stations Favorites</h1>
+    <h1 class="text-center my-4"><i>Mes Stations Favorites⭐</i></h1>
 
     <div id="message" style="display:none; padding: 10px; margin: 10px 0; border-radius: 5px;"></div>
 
@@ -20,7 +20,7 @@
                     <th>Nom de la station</th>
                     <th>Capacité</th>
                     <th>Velo mécanique</th>
-                    <th>Velo electrique</th>
+                    <th>Velo électrique</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
