Création d'un lien demandant une confirmation par émail pour modifier le mot de passe lorsque celui ci a été oublié ou pas ainsi que pour enregister un compte.

--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -132,6 +132,11 @@
             </div>
         {% endfor %}
 
+
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-danger">{{ message }}</div>
+        {% endfor %}
+
         {{ form_start(profileForm) }}
 
         <div class="form-group">
@@ -166,7 +171,7 @@
 
 
         <div class="btn-container">
-            <button type="button" class="btn-password" onclick="window.location.href='/change-password'">Modifier le mot de passe</button>
+            <button type="button" class="btn-password" onclick="window.location.href='/envoieMailMdp'">Modifier le mot de passe</button>
             <button type="button" class="btn-delete" onclick="window.location.href='/user/profile/delete'">Supprimer mon compte</button>
         </div>
 
