--- a/templates/security/index.html.twig
+++ b/templates/security/index.html.twig
@@ -5,29 +5,21 @@
 {% block content %}
 
     <form method="post">
-{#        {% if error %}#}
-{#            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
-{#        {% endif %}#}
+  {#      {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}#}
 
         {% if app.user %}
-            <div class="alert alert-info text-center mb-4">
-                Connecté en tant que : <strong>{{ app.user.userIdentifier }}</strong>
+            <div class="mb-3">
+                Connecté en tant que : {{ app.user.userIdentifier }}
             </div>
         {% endif %}
 
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-
-        {% for message in app.flashes('error') %}
-            <div class="alert alert-danger">
-                {{ message }}
-            </div>
-        {% endfor %}
-
         <label for="username">Email : </label>
         <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
         <label for="password">Password : </label>
         <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
-
 
         {% for label, messages in app.flashes %}
             <div class="alert alert-{{ label }}">
@@ -41,11 +33,16 @@
                value="{{ csrf_token('authenticate') }}"
         >
 
+        <a href="{{ path('app_request_reset_password') }}" class="btn-password">Mot de passe oublié</a>
+
         <button class="btn btn-lg btn-primary" type="submit">
             Sign in
         </button>
+
         <a class="btn btn-relocate register" href="/register">
             register
         </a>
+
     </form>
+
 {% endblock %}
