--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -134,6 +134,10 @@
             {{ form_row(registrationForm.plainPassword) }}
         </div>
 
+        <div class="form-group">
+            {{ form_row(registrationForm.confirmPassword) }}
+        </div>
+
         <button type="submit" class="btn">Register</button>
         {{ form_end(registrationForm) }}
 
